...
        if UIImagePickerController.isSourceTypeAvailable(.camera) {
            alertController.addAction(UIAlertAction(title: "Kamera", style: .default, handler: { action in
                self.presentImagePickerWithSourceType(.camera)
            }))
        }
        if UIImagePickerController.isSourceTypeAvailable(.photoLibrary) {
            alertController.addAction(UIAlertAction(title: "Foto auswählen", style: .default, handler: { action in
                self.presentImagePickerWithSourceType(.photoLibrary)
            }))
        }
        alertController.addAction(UIAlertAction(title: "Abbrechen", style: .cancel, handler: nil))
        self.present(alertController, animated: true, completion: nil)
    }
...
