...
                        <barButtonItem systemItem="camera" id="YN3-ft-wx7">
                            <connections>
                                <action selector="cameraButtonPressed:" destination="BYZ-38-t0r" id="ykz-vZ-odp"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem style="plain" systemItem="flexibleSpace" id="CXk-xD-RRw"/>
                        <barButtonItem title="Accessories..." id="1hw-34-5gA">
                            <connections>
                                <segue destination="n9t-f2-Zf1" kind="presentation" identifier="showAccessories" id="t0k-Vg-Zbq"/>
                            </connections>
                        </barButtonItem>
                    </toolbarItems>
                    <navigationItem key="navigationItem" title="Seasonizer" id="6dS-Kq-rKs">
...
